style.css
body {
  background-color: #595a5e;
  font-family: 'Kanit', sans-serif;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.players {
  text-align: center;
  display: flex;
  flex-direction: row;
  gap: 175px;
}

h1 {
  margin: 10px 30px 0 30px;
  text-shadow: 8px 0 #232931;
  font-size: 6rem;
  color: #F5F7F8;
}

h2 {
  margin: 5px 0 50px 0;
  font-size: 48px;
  color: #F5F7F8;
  text-shadow: 6px 0 #232931;
}

p {
  font-size: 40px;
  margin: 5px 0 35px 0;
  text-shadow: 6px 0 #232931;
  color: #F5F7F8;
}

img {
  width: 200px;
}

.img2 {
  transform: scaleX(-1);
}

button {
  background: #F5F7F8;
  box-shadow: 6px 4px 0 #232931;
  height: 50px;
  width: 125px;
  border-radius: 5px;
  font-size: 25px;
  margin: 60px 0 20px 0;
  text-transform: uppercase;
  font-weight: bold;
  color: #232931;
}

footer {
  margin-top: 5%;
  color: #EEEEEE;
  text-align: center;
  font-size: 20px;
}

a {
  color: white;
}

@media (max-width: 1399.98px) { 
  body {
    text-align: center;
  }
 }

@media (min-width: 300px) and (max-width: 575.98px) {

  h1 {
    margin: 10px 2px 10px 2px;
    font-size: 45px;
    text-shadow: 4px 0 #232931;
    line-height: 1;
  }
  h2 {
    margin: 10px 5px 30px 10px;
    font-size: 25px;
    text-shadow: 4px 0 #232931;
    height: 85px;
  }

  p {
    font-size: 25px;
    text-shadow: 3px 0 #232931;
    margin: 5px 0 20px 0;
  }

  .players {
    gap: 50px;
  }

  img {
    width: 125px;
  }

 #p2 {
  margin-top: 10px;
 }

 footer {
  padding: 0 5px 0 5px;
 }

}

@media (min-width: 576px) and (max-width: 769px) { 

  h1 {
    font-size: 75px;
  }
  h2 {
    height: 144px;
  }

}

/* Galaxy Fold */
@media (max-width: 299px) {

  h1 {
    margin: 10px 2px 10px 2px;
    font-size: 45px;
    text-shadow: 4px 0 #232931;
    line-height: 1;
  }

  h2 {
    margin: 10px 5px 25px 10px;
    font-size: 25px;
    text-shadow: 4px 0 #232931;
    height: 85px;
  }

  p {
    font-size: 25px;
    text-shadow: 3px 0 #232931;
    margin: 0px 0 20px 0;
  }

  .players {
    gap: 50px;
  }

  img {
    width: 100px
  }

  button{
    font-size: 20px;
    width: 90px;
    height: 40px;
  }

  footer {
    font-size: 15px;
    margin-top: 45px;
  }

}

